--- a/index.html
+++ b/index.html
@@ -62,10 +62,10 @@
             </div>
          </div>
         <div class="border-b-2 border-dashed border-[#3752FD33]"></div>
-        <section class="grid grid-cols-3 gap-6 mt-5 ">
+        <section class="grid grid-cols-3 gap-6 p-5 mt-5 ">
 
             <!-- card1 -->
-            <div class="bg-[#F4F7FF] p-6 shadow-lg rounded-1xl ">
+            <div class="bg-[#F4F7FF] p-6 shadow-lg rounded-lg card ">
                 <h3 class="w-24 p-2 mt-5 text-sm font-medium bg-white rounded-md">ShopEase</h3>
                 <h1 class="mt-3 mb-3 text-xl font-semibold title">Fix Mobile Button Issue </h1>
                 <p class="p-3 text-sm font-medium bg-white rounded-lg">Debug using Chrome DevTools, check for overlapping elements, and ensure onClick works properly
@@ -81,7 +81,7 @@
                       </div>
               </div>
               <!-- card2 -->
-              <div class="bg-[#F4F7FF] p-6 shadow-lg rounded-xl ">
+              <div class="bg-[#F4F7FF] p-6 shadow-lg rounded-xl card ">
                 <h3 class="w-24 p-2 mt-5 text-sm font-medium bg-white rounded-md">CloudSync</h3>
                 <h1 class="mt-3 mb-3 text-xl font-semibold title">Add Dark Mode</h1>
                 <p class="p-3 text-sm font-medium bg-white rounded-lg">Debug using Chrome DevTools, check for overlapping elements, and ensure onClick works properly
@@ -97,7 +97,7 @@
                       </div>
               </div>
               <!-- card3 -->
-              <div class="bg-[#F4F7FF] p-6 shadow-lg rounded-xl ">
+              <div class="bg-[#F4F7FF] p-6 shadow-lg rounded-xl card ">
                 <h3 class="w-24 p-2 mt-5 text-sm font-medium bg-white rounded-md">SwiftPay</h3>
                 <h1 class="mt-3 mb-3 text-xl font-semibold title">Optimize  Home page  </h1>
                 <p class="p-3 text-sm font-medium bg-white rounded-lg">Debug using Chrome DevTools, check for overlapping elements, and ensure onClick works properly
@@ -113,7 +113,7 @@
                       </div>
               </div>
               <!-- card4 -->
-              <div class="bg-[#F4F7FF] p-6 shadow-lg rounded-xl ">
+              <div class="bg-[#F4F7FF] p-6 shadow-lg rounded-xl card ">
                 <h3 class="w-24 p-2 mt-5 text-sm font-medium bg-white rounded-md">Meta</h3>
                 <h1 class="mt-3 mb-3 text-xl font-semibold title">Add new emoji 🤲</h1>
                 <p class="p-3 text-sm font-medium bg-white rounded-lg ">Debug using Chrome DevTools, check for overlapping elements, and ensure onClick works properly
@@ -129,7 +129,7 @@
                       </div>
               </div>
               <!-- card5 -->
-              <div class="bg-[#F4F7FF] p-6 shadow-lg rounded-xl">
+              <div class="bg-[#F4F7FF] p-6 shadow-lg rounded-xl card">
                 <h3 class="w-24 p-2 mt-5 text-sm font-medium bg-white rounded-md">Google LLC</h3>
                 <h1 class="mt-3 mb-3 text-xl font-semibold title">Integrate OpenAI API </h1>
                 <p class="p-3 text-sm font-medium bg-white rounded-lg">Debug using Chrome DevTools, check for overlapping elements, and ensure onClick works properly
@@ -145,7 +145,7 @@
                       </div>
               </div>
               <!-- card6 -->
-              <div class="bg-[#F4F7FF] p-6 shadow-lg rounded-xl ">
+              <div class="bg-[#F4F7FF] p-6 shadow-lg rounded-xl card">
                 <h3 class="w-24 p-2 mt-5 text-sm font-medium bg-white rounded-md">Glassdoar</h3>
                 <h1 class="mt-3 mb-3 text-xl font-semibold title">Improve Job searching </h1>
                 <p class="p-3 text-sm font-medium bg-white rounded-lg">Debug using Chrome DevTools, check for overlapping elements, and ensure onClick works properly
@@ -171,7 +171,7 @@
             </div>
             <button id="clears" class="bg-[#3752FD] p-2 rounded-md mt-4 text-white">Clear History</button>
 
-            <div id="history-container" class: p-4 my-2 bg-[#F4F7FF] rounded-3xl">
+            <div id="history-container" class=" p-4 my-2 bg-[#F4F7FF] rounded-3xl">
                 <p  class="font-medium" hidden>
                 
                 </p>
