added main and index setup

--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
 </head>
 <body  class="bg-[#F4F7FF]  min-h-screen  ">
-    <header class="w-11/12 mx-auto " >
-        <nav class="flex items-center justify-between h-16 bg-white rounded-lg ">
+    <header class="w-11/12 mx-auto pt-7" >
+        <nav class="flex items-center justify-between h-16 bg-white rounded-xl ">
             <!-- <div class="container "> -->
                 <!-- left side -->
                  <div class="flex h-12 ml-5 ">
