--- a/main.html
+++ b/main.html
@@ -8,7 +8,7 @@
     <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
 </head>
 <body  class="bg-[#F4F7FF] mb-10 min-h-screen  ">
-    <header class="w-11/12 mx-auto" >
+    <header class="w-11/12 mx-auto pt-7" >
         <nav class="flex items-center justify-between h-16 bg-white rounded-lg ">
                 <!-- left side -->
                  <div class="flex h-12 ml-5 ">
